--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
 
     <string-array name="propertie">
         <item>PRIVEE</item>
-        <item>ESPACE_PUBLIC</item>
+        <item>ESPACE PUBLIC</item>
         <item>MARCHE</item>
     </string-array>
 
